Update ExpandableDiv  - Fix animation duration not updating when prop changed  - Change animationDuration prop base value to millisecond instead of second  - Hide overflow when opening or collapsing  - Replace max-width and max-height with width and height respectively

--- a/src/components/storylines/expandableDiv/ExpandableDiv.scss
+++ b/src/components/storylines/expandableDiv/ExpandableDiv.scss
@@ -1,5 +1,5 @@
 .expandable-div {
-    overflow: auto;
+    overflow: hidden;
 
     &--expanded,
     &--collapsed {
@@ -9,47 +9,39 @@
             animation-duration: var(--animation-duration);
             animation-timing-function: var(--animation-timing-function);
             animation-fill-mode: forwards;
-            transition-property: max-height, max-width;
+            transition-property: height, width;
             transition-duration: var(--animation-duration);
             transition-timing-function: var(--animation-timing-function);
-        }
-    }
-
-    &--collapsed {
-        &-vertically,
-        &-horizontally,
-        &-diagonally {
-            &-untouched {
-                opacity: 0;
-            }
         }
     }
 
     &--expanded {
         &-vertically {
             animation-name: expand;
-            max-height: var(--max-height);
+            height: var(--expandable-div-height);
 
             &-untouched {
-                max-height: 100%;
+                height: var(--expandable-div-height);
             }
         }
         &-horizontally {
-            animation-name: expand;
-            max-width: 100%;
+            animation-name: expand-horizontally;
+            width: 100%;
+            height: var(--expandable-div-height);
 
             &-untouched {
-                max-width: 100%;
+                width: var(--expandable-div-width);
+                height: 100%;
             }
         }
         &-diagonally {
             animation-name: expand;
-            max-width: 100%;
-            max-height: var(--max-height);
+            width: var(--expandable-div-width);
+            height: var(--expandable-div-height);
 
             &-untouched {
-                max-width: 100%;
-                max-height: 100%;
+                width: var(--expandable-div-width);
+                height: var(--expandable-div-height);
             }
         }
     }
@@ -57,46 +49,57 @@
     &--collapsed {
         &-vertically {
             animation-name: collapse;
-            max-height: 0px;
+            height: 0px !important;
 
             &-untouched {
-                max-height: 0px;
+                height: 0px !important;
             }
         }
         &-horizontally {
             animation-name: collapse;
-            max-width: 0px;
+            width: 0px !important;
+            height: var(--expandable-div-height) !important;
 
             &-untouched {
-                max-width: 0px;
+                width: 0px !important;
             }
         }
         &-diagonally {
             animation-name: collapse;
-            max-width: 0px;
-            max-height: 0px;
+            width: 0px !important;
+            height: 0px !important;
 
             &-untouched {
-                max-width: 0px;
-                max-height: 0px;
+                width: 0px !important;
+                height: 0px !important;
             }
         }
     }
 
     // Keyframes are also a way to trigger "onAnimation" events in React.
     @keyframes collapse {
-        90% {
-            opacity: 0.9;
+        99% {
+            opacity: 1;
         }
         100% {
-            opacity: 0;
+            opacity: 1;
         }
     }
     @keyframes expand {
-        90% {
-            opacity: 0.9;
+        0% {
+            opacity: 1;
         }
         100% {
+            opacity: 1;
+        }
+    }
+    @keyframes expand-horizontally {
+        0% {
+            height: var(--expandable-div-height);
+            opacity: 1;
+        }
+        100% {
+            height: auto;
             opacity: 1;
         }
     }
